# systemd-ui

./: Makefile.am  README  configure.ac  meson.build  meson_options.txt
man/: meson.build
src/: gnome-ask-password-agent.vala  io.systemd.systemadm.desktop  io.systemd.systemadm.metainfo.xml  meson.build  org.freedesktop.systemd.gnome-ask-password-agent.desktop  systemadm.desktop  systemadm.vala  systemd-gnome-ask-password-agent.path  systemd-gnome-ask-password-agent.rules  systemd-gnome-ask-password-agent.service  systemd-interfaces.vala
